k8s/05-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: voting-app
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
  clusterIP: None
